@@ -1,28 +1,25 @@
 package hci.gnomex.controller;
 
 import hci.framework.control.Command;
-import hci.gnomex.utility.HttpServletWrappedRequest;
-import hci.gnomex.utility.Util;
 import hci.gnomex.model.AppUser;
 import hci.gnomex.model.BillingAccount;
 import hci.gnomex.model.Lab;
 import hci.gnomex.security.SecurityAdvisor;
 import hci.gnomex.utility.GNomExRollbackException;
 import hci.gnomex.utility.HibernateSession;
+import hci.gnomex.utility.HttpServletWrappedRequest;
+import hci.gnomex.utility.Util;
+import org.apache.log4j.Logger;
+import org.hibernate.Session;
+import org.hibernate.internal.SessionImpl;
+import org.hibernate.query.Query;
 
+import javax.servlet.http.HttpSession;
 import java.io.Serializable;
 import java.sql.Connection;
 import java.sql.Statement;
 import java.util.Iterator;
 import java.util.List;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-
-import org.apache.log4j.Logger;
-import org.hibernate.query.Query;
-import org.hibernate.Session;
-import org.hibernate.internal.SessionImpl;
 
 public class DeleteAppUser extends GNomExCommand implements Serializable {
 
@@ -37,7 +34,7 @@ public void validate() {
 public void loadCommand(HttpServletWrappedRequest request, HttpSession session) {
 
 	if (request.getParameter("idAppUser") != null && !request.getParameter("idAppUser").equals("")) {
-		idAppUser = new Integer(request.getParameter("idAppUser"));
+		idAppUser = Integer.valueOf(request.getParameter("idAppUser"));
 	} else {
 		this.addInvalidField("idAppUser", "idAppUser is required.");
 	}
