@@ -1,18 +1,6 @@
 package hci.gnomex.controller;
 
-import java.io.Serializable;
-import java.util.Iterator;
-import java.util.List;
-import java.util.TreeSet;
-
-import javax.servlet.http.HttpSession;
-
-import org.hibernate.Hibernate;
-import org.hibernate.Session;
-
 import hci.framework.control.Command;
-import hci.gnomex.utility.HttpServletWrappedRequest;
-import hci.gnomex.utility.Util;
 import hci.framework.control.RollBackCommandException;
 import hci.gnomex.model.Price;
 import hci.gnomex.model.PriceCategory;
@@ -20,7 +8,17 @@ import hci.gnomex.model.PriceSheet;
 import hci.gnomex.model.PriceSheetPriceCategory;
 import hci.gnomex.security.SecurityAdvisor;
 import hci.gnomex.utility.HibernateSession;
+import hci.gnomex.utility.HttpServletWrappedRequest;
+import hci.gnomex.utility.Util;
 import org.apache.log4j.Logger;
+import org.hibernate.Hibernate;
+import org.hibernate.Session;
+
+import javax.servlet.http.HttpSession;
+import java.io.Serializable;
+import java.util.Iterator;
+import java.util.List;
+import java.util.TreeSet;
 
 public class DeletePriceCategory extends GNomExCommand implements Serializable {
 
@@ -36,12 +34,12 @@ public class DeletePriceCategory extends GNomExCommand implements Serializable {
     public void loadCommand(HttpServletWrappedRequest request, HttpSession session) {
 
         if (request.getParameter("idPriceCategory") != null && !request.getParameter("idPriceCategory").equals("")) {
-            idPriceCategory = new Integer(request.getParameter("idPriceCategory"));
+            idPriceCategory = Integer.valueOf(request.getParameter("idPriceCategory"));
         } else {
             this.addInvalidField("idPriceCategory", "idPriceCategory is required.");
         }
         if (request.getParameter("idPriceSheet") != null && !request.getParameter("idPriceSheet").equals("")) {
-            idPriceSheet = new Integer(request.getParameter("idPriceSheet"));
+            idPriceSheet = Integer.valueOf(request.getParameter("idPriceSheet"));
         } else {
             this.addInvalidField("idPriceSheet", "idPriceSheet is required.");
         }
