@@ -2,30 +2,19 @@ package hci.gnomex.controller;
 
 import hci.dictionary.model.DictionaryEntry;
 import hci.framework.control.Command;
-import hci.gnomex.utility.HttpServletWrappedRequest;
-import hci.gnomex.utility.Util;
 import hci.framework.control.RollBackCommandException;
-import hci.gnomex.model.AnalysisProtocol;
-import hci.gnomex.model.FeatureExtractionProtocol;
-import hci.gnomex.model.HybProtocol;
-import hci.gnomex.model.LabelingProtocol;
-import hci.gnomex.model.OligoBarcodeSchemeAllowed;
-import hci.gnomex.model.RequestCategoryApplication;
-import hci.gnomex.model.ScanProtocol;
-import hci.gnomex.model.SeqLibProtocol;
-import hci.gnomex.model.SeqLibProtocolApplication;
+import hci.gnomex.model.*;
 import hci.gnomex.security.SecurityAdvisor;
 import hci.gnomex.utility.HibernateSession;
+import hci.gnomex.utility.HttpServletWrappedRequest;
+import hci.gnomex.utility.Util;
+import org.apache.log4j.Logger;
+import org.hibernate.Session;
 
+import javax.servlet.http.HttpSession;
 import java.io.Serializable;
 import java.util.Iterator;
 import java.util.List;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-
-import org.hibernate.Session;
-import org.apache.log4j.Logger;
 
 
 
@@ -58,7 +47,7 @@ public class DeleteProtocol extends GNomExCommand implements Serializable {
   public void loadCommand(HttpServletWrappedRequest request, HttpSession session) {
 
     if (request.getParameter("idProtocol") != null && !request.getParameter("idProtocol").equals("")) {
-      idProtocol = new Integer(request.getParameter("idProtocol"));
+      idProtocol = Integer.valueOf(request.getParameter("idProtocol"));
     }
     if (request.getParameter("protocolClassName") != null && !request.getParameter("protocolClassName").equals("")) {
       protocolClassName = request.getParameter("protocolClassName");
@@ -160,7 +149,7 @@ public class DeleteProtocol extends GNomExCommand implements Serializable {
           sess.delete(protocol);
           sess.flush();
 
-          idProtocolDeleted = new Integer(protocol.getValue());
+          idProtocolDeleted = Integer.valueOf(protocol.getValue());
 
           this.xmlResult = "<SUCCESS idProtocol=\"" + idProtocolDeleted + "\"/>";
         } else {
