@@ -46,13 +46,13 @@ public void validate() {
 public void loadCommand(HttpServletWrappedRequest request, HttpSession session) {
 	idDataTrack = null;
 	if (request.getParameter("idDataTrack") != null && !request.getParameter("idDataTrack").equals("")) {
-		idDataTrack = new Integer(request.getParameter("idDataTrack"));
+		idDataTrack = Integer.valueOf(request.getParameter("idDataTrack"));
 	}
 
 	// if idAnalysisFile is a parameter we will need to figure out idDataTrack
 	idAnalysisFile = null;
 	if (request.getParameter("idAnalysisFile") != null && !request.getParameter("idAnalysisFile").equals("")) {
-		idAnalysisFile = new Integer(request.getParameter("idAnalysisFile"));
+		idAnalysisFile = Integer.valueOf(request.getParameter("idAnalysisFile"));
 	}
 
 	// are we doing this based on files or datatracks?
@@ -64,7 +64,7 @@ public void loadCommand(HttpServletWrappedRequest request, HttpSession session) 
 	// we need to have idAnalysis if dealing with a file
 	idAnalysis = null;
 	if (request.getParameter("idAnalysis") != null && !request.getParameter("idAnalysis").equals("")) {
-		idAnalysis = new Integer(request.getParameter("idAnalysis"));
+		idAnalysis = Integer.valueOf(request.getParameter("idAnalysis"));
 	}
 
 	analysisNumber = null;
